[package]
name = "draugr"
version = "0.1.0"
edition = "2021"

authors = ["Misza <misza@misza.net>"]
description = "A terminal MUD client"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "3.1.0"
anyhow = "1.0"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
ratatui = { version = "0.24", features = ["crossterm"] }
regex = "1.10"
rhai = "1.16"
telnet = { version="0.2", features = ["zcstream"] }
tokio = { version = "1.34", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
